<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.zww.music_mvvm.ui.home.HomeViewMode" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/content_main" />

            <FrameLayout
                android:id="@+id/fl_bannner"
                android:layout_below="@+id/content_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_95"
                    android:background="@color/colorPrimary" />

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:background="@drawable/banner_background_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_15" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_function"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_74"
                android:layout_below="@+id/fl_bannner"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <RelativeLayout
                    android:id="@+id/rl_day_rec"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/daliy_recommend"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/text_daliy"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@{vm.date}"
                            android:textColor="@color/color_home_text"
                            android:textSize="@dimen/sp_12" />

                        <ImageView
                            android:id="@+id/iv_day_recommend"
                            android:layout_width="@dimen/dp_50"
                            android:layout_height="@dimen/dp_50"
                            android:background="@mipmap/ic_daily_recommend" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/daliy_recommend"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/day_recommend"
                        android:textColor="@color/color_home_text"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_mine_fm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_mine_fm"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_mine_fm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_mine_fm"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/fm"
                        android:textColor="@color/color_home_text"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_play_list"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_play_list"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_playlist" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_play_list"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/playlist"
                        android:textColor="@color/color_home_text"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_rank"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_rank"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_rank" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_rank"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/rank"
                        android:textColor="@color/color_home_text"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_live"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_live"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_live" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_live"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/live"
                        android:textColor="@color/color_home_text"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_radio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_radio"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_radio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_radio"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_4"
                        android:text="@string/radio"
                        android:textColor="@color/color_home_text"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_gap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@id/ll_function"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@color/color_back_gap" />

            <RelativeLayout
                android:id="@+id/rl_show_recommend_playlist"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_below="@+id/tv_gap"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_25"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    android:text="@string/recommend_playlist"
                    android:textColor="@color/color_home_text"
                    android:textSize="@dimen/sp_18"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_plalist_playground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/bg_playlist_playground"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_8"
                    android:text="@string/playlist_playground"
                    android:textColor="#353636"
                    android:textSize="@dimen/sp_11" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/recommend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommend_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_show_recommend_playlist"
                android:orientation="horizontal" />

            <RelativeLayout
                android:id="@+id/re_mgc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_below="@+id/recommend_recycle"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_mgc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_25"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    android:text="@string/recommend_playlist"
                    android:textColor="@color/color_home_text"
                    android:textSize="@dimen/sp_18"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_mgc_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/bg_playlist_playground"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_8"
                    android:text="@string/playlist_playground"
                    android:textColor="#353636"
                    android:textSize="@dimen/sp_11" />

            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_16"
                android:id="@+id/mgc_recycle"
                android:layout_below="@+id/re_mgc"/>

        </RelativeLayout>


    </FrameLayout>
</layout>